# rules_go-3154-repro

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  main.go
