load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:go_naming_convention go_default_library
# gazelle:prefix github.com/nickgooding/rules_go-3154-repro
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nickgooding/rules_go-3154-repro",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_mock//gomock:go_default_library"],
)

go_binary(
    name = "rules_go-3154-repro",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
